load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "serial",
    srcs = [
        "open_darwin.go",
        "open_freebsd.go",
        "open_linux.go",
        "open_windows.go",
        "serial.go",
    ],
    importpath = "github.com/mihaigalos/intel-hex-parser/serial",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "serial_test",
    srcs = [
        "integration_test.go",
        "serial_test.go",
    ],
    embed = [":serial"],
)
